public enum Rule {
    CONWAYLIFE,
    FREDKINMOORE,
    FREDKIN,
    CONWAYLIFENEUMANN,
    HORSE
}
